# HTML-Tag-Stripper

./: .gitignore  LICENSE  README.md  setup.cfg
src/htmlstripper/: __init__.py  __main__.py  htmlstripper.py
