[metadata]
name = html-stripper
version = 1.0.2
url = https://github.com/Mgrimaldi20/HTML-Tag-Stripper
project_urls =
	Source Code = https://github.com/Mgrimaldi20/HTML-Tag-Stripper
license = GNU GPLv3
author = Marco Grimaldi
author_email = marco.grimaldi2020@gmail.com
description = A class for stripping html tags from a file.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = htmlstripper
package_dir = = src
python_version >= "3.5"

[options.entry_points]
console_scripts =
    htmlstripper = htmlstripper:__main__
